# OpenGL-Renderer

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
dependencies/GLAD/include/glad/: glad.h
dependencies/GLAD/src/: glad.c
dependencies/GLEW/lib/: libGLEW.2.1.0.dylib
logs/logs_test/: testlog_20221016.txt
res/shaders/: Basic.shader
src/: Application.cpp  CompilerExtension.h  GLErrorDisposition.cpp  GLErrorDisposition.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
tests/: Test.cpp  Test.h  TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h
